Upgraded to Bootstrap v5.0.0-beta1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-5-sass-gulp-4-boilerplate",
-  "version": "1.0.1",
-  "description": "A Bootstrap 5.0.0-alpha2 boilerplate with sass and gulp 4",
+  "version": "1.0.2",
+  "description": "A Bootstrap 5.0.0-beta1 boilerplate with sass and gulp 4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/JayeshLab/bootstrap-5-sass-gulp-4-boilerplate#readme",
   "dependencies": {
-    "bootstrap": "^5.0.0-alpha2",
-    "bootstrap-icons": "^1.0.0",
-    "popper.js": "1.16.0"
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
