--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-5-sass-gulp-4-boilerplate",
   "version": "1.0.2",
-  "description": "A Bootstrap 5.0.0-beta1 boilerplate with sass and gulp 4",
+  "description": "A Bootstrap 5.0.0 boilerplate with sass and gulp 4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
